--- a/europython2019/style.css
+++ b/europython2019/style.css
@@ -8,6 +8,13 @@
     padding: 0px;
 }
 
+
+/* Allow bigger code blocks */
+.reveal pre code {
+    max-height: 80%;
+}
+
+
 /* Increase font sizes a bit */
 .reveal section h1 {
     font-size: 3.0em !important;
@@ -25,7 +32,7 @@
     font-size: 1.2em;
 }
 .reveal section pre code {
-    font-size: 1.5em !important;
+    font-size: 1.5em;
 }
 
 
@@ -35,6 +42,20 @@
 }
 
 #pipeline h2 {
+    display: none;
+}
+
+#keras-model h2 {
+    display: none;
+}
+#keras-model code {
+    font-size: 1.2em; !important
+}
+#keras-model .sourceCode {
+    margin: 0px;
+}
+
+#demo-video h2 {
     display: none;
 }
 
