--- a/tinymlEMEA2021/style.css
+++ b/tinymlEMEA2021/style.css
@@ -6,23 +6,14 @@
     background-repeat: no-repeat;
     background-position: right bottom;
     position: fixed;
-    bottom: 0.5em;
-    left: 3.0em;
+    bottom: 0.8em;
+    left: 700px;
     opacity: 0.9;
     width: 358px;
     height: 65px;
     content: "";
     z-index: -100;
 }
-/* FIXME: add Soundsensing logo back
-  
-
-*/
-
-#model-constraints {
-    background-color: rgba(255, 255, 255, .3);
-}
-
 
 .reveal section img { 
     border:none;
@@ -32,35 +23,10 @@
     padding: 10px;
 }
 
-#soundsensing h2 {
-    display: none;
-}
-
-#dashboard h2 {
-    display: none;
-} 
-
 #demo-video h2 {
-    display: none;
 }
 
-#architecture h2 {
-    display: none;
-}
-
-#pipeline h2 {
-    display: none;
-}
-
-#confusion {
-    padding: 0px;
-}
-
-#confusion p {
-    margin: 0px;
-}
-
-#confusion h2 {
+#summary h2 {
     display: none;
 }
 
